--- a/DogGo/Views/Owners/Create.cshtml
+++ b/DogGo/Views/Owners/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label> @*this "asp-for" is to highlight?*@
+                <label asp-for="Name" class="control-label"></label> 
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a> @*this is the equivalent of click event?*@
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
