--- a/DogGo/Views/Owners/Index.cshtml
+++ b/DogGo/Views/Owners/Index.cshtml
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.NeighborhoodName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |@*|What are the two edits here? One goes to controller, right? *@
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) 
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
